--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,13 @@
 {
+  "version": 2,
+  "builds": [
+    {
+      "src": "next.config.js",
+      "use": "@vercel/next"
+    }
+  ],
   "routes": [
     { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index.html" }
+    { "src": "/(.*)", "dest": "/$1" }
   ]
 }
